[gd_scene load_steps=9 format=2]

[ext_resource path="res://TmblTouchscreen.gd" type="Script" id=1]
[ext_resource path="res://assets/Wood and Paper UI/Mobile Buttons/Mobile Buttons/2.png" type="Texture" id=2]
[ext_resource path="res://assets/Wood and Paper UI/Mobile Buttons/Mobile Buttons/5.png" type="Texture" id=3]
[ext_resource path="res://assets/Wood and Paper UI/Mobile Buttons/Mobile Buttons/4.png" type="Texture" id=4]
[ext_resource path="res://assets/Wood and Paper UI/Mobile Buttons/Mobile Buttons/3.png" type="Texture" id=5]
[ext_resource path="res://assets/Wood and Paper UI/Mobile Buttons/Mobile Buttons Cooldown/1.png" type="Texture" id=6]
[ext_resource path="res://assets/Wood and Paper UI/Mobile Buttons/Mobile Buttons/6.png" type="Texture" id=7]
[ext_resource path="res://assets/Wood and Paper UI/Mobile Buttons/Mobile Buttons/button-pause-hover.png" type="Texture" id=8]

[node name="TmblTouchscreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Kanan" type="TouchScreenButton" parent="."]
position = Vector2( 30, -21 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 4 )
pressed = ExtResource( 6 )

[node name="Kiri" type="TouchScreenButton" parent="."]
position = Vector2( -19, -22 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="Lompat" type="TouchScreenButton" parent="."]
position = Vector2( 239, -21 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 2 )
pressed = ExtResource( 6 )

[node name="Serang" type="TouchScreenButton" parent="."]
position = Vector2( 201, -13 )
normal = ExtResource( 3 )
pressed = ExtResource( 6 )

[node name="Lari" type="TouchScreenButton" parent="."]
position = Vector2( 220, -59 )
scale = Vector2( 1.2, 1.2 )
normal = ExtResource( 7 )
pressed = ExtResource( 6 )

[node name="Menu" type="TouchScreenButton" parent="."]
position = Vector2( 120, -206 )
scale = Vector2( 0.0888889, 0.0888889 )
normal = ExtResource( 8 )

[connection signal="pressed" from="Kanan" to="." method="_on_Kanan_pressed"]
[connection signal="released" from="Kanan" to="." method="_on_Kanan_released"]
[connection signal="pressed" from="Kiri" to="." method="_on_Kiri_pressed"]
[connection signal="released" from="Kiri" to="." method="_on_Kiri_released"]
[connection signal="pressed" from="Lompat" to="." method="_on_Lompat_pressed"]
[connection signal="released" from="Lompat" to="." method="_on_Lompat_released"]
[connection signal="pressed" from="Serang" to="." method="_on_Enter_pressed"]
[connection signal="released" from="Serang" to="." method="_on_Enter_released"]
[connection signal="pressed" from="Lari" to="." method="_on_Lari_pressed"]
[connection signal="released" from="Lari" to="." method="_on_Lari_released"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="released" from="Menu" to="." method="_on_Menu_released"]
